# AgentR-backend

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  dockerfile  pyproject.toml
migrations/: V1__create_users_table.sql
src/: app.py
src/data/: user.py
src/database/: db_manager.py
src/db/: __init__.py  db_manager.py
src/db/models/: user.py
src/migrations/: migrate.py
src/models/: user.py
src/repositories/: __init__.py  user.py
src/routes/: __init__.py  auth.py  conversation.py  dependencies.py  dto.py  schemas.py  status.py  status_message.py  user.py
src/schemas/: __init__.py  models.py
src/service/: __init__.py  user.py
src/services/: __init__.py  auth.py  status.py  user.py
src/settings/: __init__.py  config.py  settings.py
